--- a/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/homepage.less
+++ b/ckanext-offgridtheme/ckanext/offgridtheme/sources/styles/less/homepage.less
@@ -135,7 +135,7 @@
 .tool-media {
   img {
     display: block;
-    max-width: 100%;
+    width: 100%;
     height: auto;
   }
 
@@ -143,6 +143,13 @@
     width: 64%;
     padding-right: 40px;
   }
+}
+
+.tool-copy {
+  @media (min-width: 768px) {
+    width: 36%;
+    vertical-align: middle;
+  } 
 }
 
 .tool-media-screenshot {
@@ -154,9 +161,9 @@
   background: @emBaseColorLighter;
 
   &::before {
+    .box-shadow(0 1px 0 0 rgba(0,0,0,0.08));
     position: relative;
     z-index: 2;
-    .box-shadow(0 1px 0 0 rgba(0,0,0,0.08));
     display: block;
     width: 100%;
     height: 20px;
@@ -191,7 +198,6 @@ a.tool-media-screenshot {
 }
 
 .tool-header {
-  padding-top: 20px;
   margin-bottom: 10px;
 
   @media (min-width: 768px) {
